# XingCam

./: .flutter-plugins-dependencies  .gitignore  README.md  analysis_options.yaml  analyze.txt  analyzer_final.txt  analyzer_pass2.txt  build.yaml  build_err.txt  build_errors.txt  build_log.txt  build_out.txt  capture_fail_final.txt  capture_test_fail.txt  codebase_dump.txt  doc.txt  doctor.txt  err.txt  err_utf8.txt  errors3.txt  errors_clean.txt  errors_only.txt  final_errors.txt  final_errors_2.txt  final_errors_3.txt  final_errors_4.txt  final_errors_5.txt  final_errors_6.txt  final_errors_7.txt  final_errors_8.txt  final_errors_9.txt  final_errors_check.txt  final_errors_check2.txt  final_errors_check3.txt  final_errors_final.txt  final_errors_post_ui.txt  fix_constants.ps1  fix_imports.ps1  flutter_out.txt  get_presets_fail.txt  (+10 more)
.github/workflows/: deploy.yml  performance_guard.yml
android/: key.properties.template
android/app/: build.gradle.kts  proguard-rules.pro
app-debug-info/: app.android-arm.symbols  app.android-arm64.symbols  app.android-x64.symbols
assets/icons/: README.md
assets/lang/: en.json  vi.json
assets/luts/: cool_fade.cube  fuji_superia.cube  kodak_portra.cube  noir.cube  velvia.cube  warm_summer.cube
assets/overlays/: README.md
lib/: main.dart
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs
shaders/: beauty_engine.frag
test/: harmonization_service_test.dart  pipeline_context_test.dart  provenance_service_test.dart  widget_test.dart
test_driver/: performance_integration_test.dart
windows/: CMakeLists.txt
(+220 files in other folders)
