[package]
name = "xingcam_rust_core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Standard FRB link
flutter_rust_bridge = "=2.12.0"

# Sovereign Cryptography and Pixel Math
image = "0.24.7"
sha2 = "0.10.8"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen_units = 1

[profile.release.package.image]
opt-level = 3
